Fix new installation commands.

--- a/src/main/bash/package.install.jdk.8
+++ b/src/main/bash/package.install.jdk.8
@@ -1,2 +1,2 @@
 #!/usr/bin/env bash
-command.managed.execute disjunction package.install jdk.8
+command.managed.execute disjunction package.install.jdk.8
