--- a/projects/net.splitcells.dem/src/main/xml/net/splitcells/dem/lang/perspective/guidelines/perspectives.xml
+++ b/projects/net.splitcells.dem/src/main/xml/net/splitcells/dem/lang/perspective/guidelines/perspectives.xml
@@ -53,6 +53,7 @@
                     </d:toDo>
                 </d:toDo>
             </d:toDo>
+            <d:toDo>Perspectives describe and constructor tree.</d:toDo>
         </d:toDo>
     </meta>
     <chapter>
