Document perspective's gate to heaven principle.

--- a/projects/net.splitcells.dem/src/main/xml/net/splitcells/dem/lang/perspective/guidelines/networks.xml
+++ b/projects/net.splitcells.dem/src/main/xml/net/splitcells/dem/lang/perspective/guidelines/networks.xml
@@ -12,6 +12,20 @@
         <license>standard</license>
     </meta>
     <chapter>
+        <title>Gate to Heaven</title>
+        <paragraph>Every path to a specific perspective in the network can be viewed as a story of discovery:
+            travelers wandering through the network searching for their destination.
+            Everyone has their target(s).
+            Some know what they are looking for.
+            Some of them are walking through the network aimlessly, searching for their meaning in life.
+        </paragraph>
+        <paragraph>The root perspective of the network should be the gateway to heaven for these souls.
+            It should accommodate everyone's reasonable needs.
+            In other words, any reasonable list of questions suitable for searching a desired perspective
+            in the network, should correspond to a path in the network.
+        </paragraph>
+    </chapter>
+    <chapter>
         <title>Globalization</title>
         <paragraph>Globalization is the act of minimizing the number
             of networks or making it easy to translate, connect and traverse such network clusters.
