#37 Add task to.

--- a/src/main/md/net/splitcells/network/tickets/37.md
+++ b/src/main/md/net/splitcells/network/tickets/37.md
@@ -5,3 +5,4 @@
 * TODO: Try using simple HTML elements, instead of complex nested elements.
 * TODO: Simplify image paths.
 * TODO: Support default layout with no background images. Images should only be added by extensions.
+* TODO: Simplify css.
