#71 Add ticket tasks.

--- a/src/main/md/net/splitcells/network/tickets/open/71.md
+++ b/src/main/md/net/splitcells/network/tickets/open/71.md
@@ -1,2 +1,6 @@
 # Create blog for `net.splitcells.network`.
-* TODO: Create hugo project for easy deployment.
+* DONE: Create hugo project for easy deployment.
+* TODO: Create blog guidelines/README.
+* TODO: Create project commands for building the project.
+* TODO: Deploy to SourceHut.
+* TODO: Create first article.
