#71 Deploy blog to SourceHut.

--- a/src/main/md/net/splitcells/network/tickets/open/71.md
+++ b/src/main/md/net/splitcells/network/tickets/open/71.md
@@ -2,5 +2,6 @@
 * DONE: Create hugo project for easy deployment.
 * TODO: Create blog guidelines/README.
 * TODO: Create project commands for building the project.
-* TODO: Deploy to SourceHut.
+* DONE: Deploy to SourceHut.
 * TODO: Create first article.
+* TODO: Use standardized file structure for this project.
