--- a/src/main/md/net/splitcells/network/tickets/open/71.md
+++ b/src/main/md/net/splitcells/network/tickets/open/71.md
@@ -1,7 +1,7 @@
 # Create blog for `net.splitcells.network`.
 * DONE: Create hugo project for easy deployment.
-* TODO: Create blog guidelines/README.
+* DONE: Create blog guidelines/README.
 * DONE: Create project commands for building the project.
 * DONE: Deploy to SourceHut.
 * TODO: Create first article.
-* TODO: Use standardized file structure for this project.
+* DONE: Use standardized file structure for this project.
