--- a/src/main/md/net/splitcells/network/tickets/open/71.md
+++ b/src/main/md/net/splitcells/network/tickets/open/71.md
@@ -5,3 +5,4 @@
 * DONE: Deploy to SourceHut.
 * TODO: Create first article.
 * DONE: Use standardized file structure for this project.
+* TODO: Support Gemini protocol.
