Document command 'command.managed.environment.configure'.

--- a/projects/net.splitcells.os.state.interface/src/doc/man/user/user.configure.man
+++ b/projects/net.splitcells.os.state.interface/src/doc/man/user/user.configure.man
@@ -1,7 +1,8 @@
 .Dd 14/11/2020
 .Dt user.configure
 .Sh NAME
-"user.configure": Configures the current user.
+.Nm user.configure
+Configures the current user.
 .Sh Description
 
 Configures the current user.
