--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -1,16 +1,23 @@
 # Determine licensing and contribution protocol.
+
 This is no lawyer advice, the following only represents some contributor opinions and understanding.
 
 * DONE Determine licensing.
+* TODO Implement licensing.
 * TODO Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
+
 # Determine licensing.
+
 ## Licensing Goal
+
 Dual licensing the program source code under the MIT and EPL 2.0 with the secondary licenses notice is considered the solution.
 Thereby, one can relicense the project, if the license is considered to be incorrect.
 On the other hand, one can still switch to EPL 2.0 only,
 if the license is considered to be correct.
+
 ## Reasoning
+
 Before that, dual licensing the program source code under MIT and Apache 2.0
 was considered the correct way,
 because Rust seemed to be a good open source role model.
@@ -23,15 +30,22 @@ The founder of the project is located in Europe,
 so it makes more sense to target European communities.
 The weak copy-left approach also enables some extended copyright protections,
 while offering similar license compatibility.
+
 ## Implementation
+
 Detailed information about EPL 2.0 can be found
 [here](https://www.eclipse.org/legal/epl-2.0/).
 
 The [Eclipse Foundation Project Handbook](https://www.eclipse.org/projects/handbook/)
 is used as a guide in order to determine licensing related
 file layout and license notices.
+
 #Organize Contributions
+
 ## Determine contribution protocol.
+
 TODO
+
 ## Determine contribution documents.
+
 TODO
