#2 Document pull request submit guidelines.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -4,7 +4,7 @@ This is no lawyer advice, the following only represents some contributor opinion
 
 * DONE Determine licensing.
 * TODO Implement licensing.
-* TODO Organize contributions.
+* DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
 
 # Determine licensing.
@@ -44,8 +44,11 @@ file layout and license notices.
 
 ## Determine contribution protocol.
 
-TODO
+The Linux kernel and Git are the main role models for this. 
 
 ## Determine contribution documents.
 
-TODO
+The `CONTRIBUTING.md` and the `Developer_Certificate_of_Origin.v1.1.txt`
+are used as contribution guidelines.
+Support information and tutorials will also be added
+as they are needed.
