--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -22,7 +22,7 @@ Before that, dual licensing the program source code under MIT and Apache 2.0
 was considered the correct way,
 because Rust seemed to be a good open source role model.
 The reasoning for [dual licensing](https://mail.mozilla.org/pipermail/rust-dev/2012-November/002664.html)
-seemed to be good, so it was adopted.
+seemed to be good, so it was adopted (permissive licensing and patent clause).
 
 The Apache Software Foundation is an American organization,
 whereas the Eclipse Foundation AISBL is an Euorpean-based organization.
