#2 Add additional sub tasks.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -2,8 +2,13 @@
 
 This is no lawyer advice, the following only represents some contributor opinions and understanding.
 
-* DONE Determine licensing.
+* TODO Determine licensing.
+  * DONE Determine licensing for software code.
+  * TODO Determine licensing for documentation.
 * TODO Implement licensing.
+  * TODO Determine license obligations.
+  * TODO Create notice file according to the [Eclipse Handbook](https://www.eclipse.org/projects/handbook/#legaldoc-notice).
+  * TODO Add copyright headers.
 * DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
 
