#2 Document that each file should have its own licensing.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -21,6 +21,8 @@ Thereby, one can relicense the project, if the license is considered to be incor
 On the other hand, one can still switch to EPL 2.0 only,
 if the license is considered to be correct.
 
+The documentation is licensed under 
+
 ## Reasoning
 
 Before that, dual licensing the program source code under MIT and Apache 2.0
@@ -37,6 +39,15 @@ The weak copy-left approach also enables some extended copyright protections,
 while offering similar license compatibility.
 
 ## Implementation
+
+Each file should have its own licensing info.
+In other words licensing is done on a per-file basis.
+
+Licensing info of a file can be split into a separate file,
+but each such file needs its own separate licensing file.
+This is separate licensing file should be in the same folder as the file with
+the actual content.
+Their relation should be clearly visible by using the same file prefix.
 
 Detailed information about EPL 2.0 can be found
 [here](https://www.eclipse.org/legal/epl-2.0/).
