--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -6,8 +6,9 @@ This is no lawyer advice, the following only represents some contributor opinion
   * DONE Determine licensing for software code.
   * TODO Determine licensing for documentation.
 * TODO Implement licensing.
-  * TODO Determine license obligations.
-  * TODO Create notice file according to the [Eclipse Handbook](https://www.eclipse.org/projects/handbook/#legaldoc-notice).
+  * TODO Determine and full fill license obligations.
+  * TODO Templates
+  * TODO Determine and create license related files.
   * TODO Add copyright headers.
 * DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
@@ -40,21 +41,39 @@ while offering similar license compatibility.
 
 ## Implementation
 
-Each file should have its own licensing info.
-In other words licensing is done on a per-file basis.
-
-Licensing info of a file can be split into a separate file,
-but each such file needs its own separate licensing file.
-This is separate licensing file should be in the same folder as the file with
-the actual content.
-Their relation should be clearly visible by using the same file prefix.
+The [Eclipse Foundation Project Handbook](https://www.eclipse.org/projects/handbook/)
+is used as a guide in order to determine licensing related
+file layout and license notices.
 
 Detailed information about EPL 2.0 can be found
 [here](https://www.eclipse.org/legal/epl-2.0/).
 
-The [Eclipse Foundation Project Handbook](https://www.eclipse.org/projects/handbook/)
-is used as a guide in order to determine licensing related
-file layout and license notices.
+### Notice File
+
+TODO
+
+### License File
+
+TODO
+
+### Licensing On Project Basis
+
+TODO
+
+### License Information on File Basis
+
+Each file should have its own licensing info.
+In other words licensing is done on a per-file basis.
+It is recommended, that the licensing info is located in the licensed files itself.
+This is usually done via copyright headers.
+
+TODO: Template for copyright header.
+
+Alternatively, Licensing info of a file can be split into a separate file,
+but each such file needs its own separate licensing file.
+This is separate licensing file should be in the same folder as the file with
+the actual content.
+Their relation should be clearly visible by using the same file prefix.
 
 #Organize Contributions
 
