#2 Add license understanding.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -1,5 +1,7 @@
 # Determine licensing and contribution protocol.
 
+Author: Mārtiņš Avots
+
 This is no lawyer advice, the following only represents some contributor opinions and understanding.
 
 * TODO Determine licensing.
@@ -22,7 +24,14 @@ Thereby, one can relicense the project, if the license is considered to be incor
 On the other hand, one can still switch to EPL 2.0 only,
 if the license is considered to be correct.
 
-The documentation is licensed under 
+The documentation is licensed under TODO
+
+## Understanding
+
+To my understanding of the EPL 2.0 license and the
+[Eclipse EPL 2.0 FAQ](https://www.eclipse.org/legal/epl-2.0/faq.php#epl-derivative)
+Derivative Works do not seem to include works that merely link (or bind by name)
+the original work and derivative works.
 
 ## Reasoning
 
@@ -30,14 +39,15 @@ Before that, dual licensing the program source code under MIT and Apache 2.0
 was considered the correct way,
 because Rust seemed to be a good open source role model.
 The reasoning for [dual licensing](https://mail.mozilla.org/pipermail/rust-dev/2012-November/002664.html)
-seemed to be good, so it was adopted (permissive licensing and patent clause).
+seemed to be good, so it was considered (permissive licensing and patent clause).
 
 The Apache Software Foundation is an American organization,
 whereas the Eclipse Foundation AISBL is an Euorpean-based organization.
 The founder of the project is located in Europe,
 so it makes more sense to target European communities.
 The weak copy-left approach also enables some extended copyright protections,
-while offering similar license compatibility.
+while offering similar license compatibility,
+so dual licensing with MIT and EPL 2.0 was adopted.
 
 ## Implementation
 
