--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -62,9 +62,20 @@ Detailed information about EPL 2.0 can be found
 
 TODO
 
-### License File
+### License File Header
 
-TODO
+```
+/********************************************************************************
+ * Copyright (c) {date} {owner}[and others]
+ *
+ * This program and the accompanying materials are made available under the
+ * terms of the Eclipse Public License 2.0, which is available at
+ * http://www.eclipse.org/legal/epl-2.0, or the MIT License,
+ * which is available at https://spdx.org/licenses/MIT.html.
+ *
+ * SPDX-License-Identifier: EPL-2.0 OR MIT
+ ********************************************************************************/
+```
 
 ### Licensing On Project Basis
 
