#2 Document usage of license header.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -62,7 +62,7 @@ Detailed information about EPL 2.0 can be found
 
 TODO
 
-### License File Header
+### File License Header
 
 ```
 /********************************************************************************
@@ -76,6 +76,7 @@ TODO
  * SPDX-License-Identifier: EPL-2.0 OR MIT
  ********************************************************************************/
 ```
+> This is the license header for Java files.
 
 ### Licensing On Project Basis
 
