--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -12,6 +12,7 @@ This is no lawyer advice, the following only represents some contributor opinion
   * TODO Templates
   * TODO Determine and create license related files.
   * TODO Add copyright headers.
+  * TODO Render license info in website.
 * DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
 
