--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -8,7 +8,7 @@ This is no lawyer advice, the following only represents some contributor opinion
   * DONE Determine licensing for software code.
   * TODO Determine licensing for documentation.
 * TODO Implement licensing.
-  * TODO Determine and full fill license obligations.
+  * TODO Determine and fulfill license obligations.
   * TODO Templates
   * TODO Determine and create license related files.
   * TODO Add copyright headers.
