#2 Add copy of used licenses.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -8,6 +8,7 @@ This is no lawyer advice, the following only represents some contributor opinion
   * DONE Determine licensing for software code.
   * TODO Determine licensing for documentation.
 * TODO Implement licensing.
+  * DONE Add copy of licenses to repo.
   * TODO Determine and fulfill license obligations.
   * TODO Templates
   * TODO Determine and create license related files.
