--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -14,6 +14,7 @@ This is no lawyer advice, the following only represents some contributor opinion
   * TODO Determine and create license related files.
   * TODO Add copyright headers.
   * TODO Render license info in website.
+  * TODO Determine secondary licensing requirements.
 * DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
 
