#2 Define licensing of non program source code.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -4,9 +4,9 @@ Author: Mārtiņš Avots
 
 This is no lawyer advice, the following only represents some contributor opinions and understanding.
 
-* TODO Determine licensing.
+* DONE Determine licensing.
   * DONE Determine licensing for software code.
-  * TODO Determine licensing for documentation.
+  * DONE Determine licensing for documentation.
 * TODO Implement licensing.
   * DONE Add copy of licenses to repo.
   * TODO Determine and fulfill license obligations.
@@ -27,7 +27,9 @@ Thereby, one can relicense the project, if the license is considered to be incor
 On the other hand, one can still switch to EPL 2.0 only,
 if the license is considered to be correct.
 
-The documentation is licensed under TODO
+The rest of the source code is licensed like program source code.
+
+This does not apply to external dependencies.
 
 ## Understanding
 
