#2 Determine licensing on project basis.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -63,6 +63,13 @@ file layout and license notices.
 Detailed information about EPL 2.0 can be found
 [here](https://www.eclipse.org/legal/epl-2.0/).
 
+### Licensing On Project Basis
+
+Every project in this repo is licensed under the same license.
+Not every project needs a dedicated license info.
+For now, it is enough if the license notice file is located at the top root
+folder.
+
 ### Notice File
 
 TODO
@@ -82,10 +89,6 @@ TODO
  ********************************************************************************/
 ```
 > This is the license header for Java files.
-
-### Licensing On Project Basis
-
-TODO
 
 ### License Information on File Basis
 
