#2 Provide central licensing file.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -70,6 +70,8 @@ Not every project needs a dedicated license info.
 For now, it is enough if the license notice file is located at the top root
 folder.
 
+The `LICENSE.md` provides links to all licensing information.
+
 ### Notice File
 
 TODO
