--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -14,7 +14,7 @@ This is no lawyer advice, the following only represents some contributor opinion
   * TODO Determine and create license related files.
   * TODO Add copyright headers.
   * TODO Render license info in website.
-  * TODO Determine secondary licensing requirements.
+  * DONE Determine secondary licensing requirements.
 * DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
 
@@ -87,7 +87,13 @@ TODO
  * http://www.eclipse.org/legal/epl-2.0, or the MIT License,
  * which is available at https://spdx.org/licenses/MIT.html.
  *
- * SPDX-License-Identifier: EPL-2.0 OR MIT
+ * This Source Code may also be made available under the following Secondary
+ * Licenses when the conditions for such availability set forth in the Eclipse
+ * Public License, v. 2.0 are satisfied: GNU General Public License, version 2
+ * with the GNU Classpath Exception which is
+ * available at https://www.gnu.org/software/classpath/license.html.
+ *
+ * SPDX-License-Identifier: EPL-2.0 OR MIT OR GPL-2.0 WITH Classpath-exception-2.0
  ********************************************************************************/
 ```
 > This is the license header for Java files.
