#2 Summarize licensing of the project.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -18,6 +18,9 @@ This is no lawyer advice, the following only represents some contributor opinion
 * DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
 
+The [Eclipse Project Handbook](https://www.eclipse.org/projects/handbook/)
+is used as a guideline for this.
+
 # Determine licensing.
 
 ## Licensing Goal
@@ -70,7 +73,9 @@ Not every project needs a dedicated license info.
 For now, it is enough if the license notice file is located at the top root
 folder.
 
-The `LICENSE.md` provides links to all licensing information.
+The `LICENSE.md` provides links to all licensing information
+and also needs to explicitly state the licensing of the project files
+without accounting for third party content (i.e. dependencies).
 
 ### Notice File
 
