#2 Define NOTICE file format.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -10,8 +10,9 @@ This is no lawyer advice, the following only represents some contributor opinion
 * TODO Implement licensing.
   * DONE Add copy of licenses to repo.
   * TODO Determine and fulfill license obligations.
-  * TODO Templates
+  * DONE Templates
   * TODO Determine and create license related files.
+  * TODO Define copyright headers.
   * TODO Add copyright headers.
   * TODO Render license info in website.
   * DONE Determine secondary licensing requirements.
@@ -79,7 +80,28 @@ without accounting for third party content (i.e. dependencies).
 
 ### Notice File
 
-TODO
+```
+# Notices for [project]
+
+## Copyright
+
+All content is the property of the respective authors or their employers.
+For more information regarding authorship of content, please consult the
+listed source code repository logs.
+
+## Project Licenses
+
+[...]
+
+## Third Party Content
+
+[Third Party Content ID/Name and Version]
+
+* License: [...]
+* Website: [...]
+* Source Code: [...]
+
+```
 
 ### File License Header
 
