#2 Document purpose of notice file.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -80,6 +80,10 @@ without accounting for third party content (i.e. dependencies).
 
 ### Notice File
 
+This file states the licenses of the project and its third party content.
+The notice file should contain all licensing information,
+except for the actual copies of the licenses etc.
+
 ```
 # Notices for [project]
 
@@ -131,8 +135,6 @@ Each file should have its own licensing info.
 In other words licensing is done on a per-file basis.
 It is recommended, that the licensing info is located in the licensed files itself.
 This is usually done via copyright headers.
-
-TODO: Template for copyright header.
 
 Alternatively, Licensing info of a file can be split into a separate file,
 but each such file needs its own separate licensing file.
