#2 Determine license obligations.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -9,12 +9,13 @@ This is no lawyer advice, the following only represents some contributor opinion
   * DONE Determine licensing for documentation.
 * TODO Implement licensing.
   * DONE Add copy of licenses to repo.
-  * TODO Determine and fulfill license obligations.
+  * DONE Determine license obligations.
   * DONE Templates
-  * TODO Determine and create license related files.
-  * TODO Define copyright headers.
+  * DONE Determine and create license related files.
+  * DONE  Define copyright headers.
   * TODO Add copyright headers.
-  * TODO Render license info in website.
+  * TODO Fulfill license obligations.
+   * TODO Render license info in website.
   * DONE Determine secondary licensing requirements.
 * DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
@@ -141,6 +142,13 @@ but each such file needs its own separate licensing file.
 This is separate licensing file should be in the same folder as the file with
 the actual content.
 Their relation should be clearly visible by using the same file prefix.
+
+### License Obligations
+
+Every copy and distribution of this project should contain copies of the licenses,
+the notice and the license file.
+Each distribution format should provide easy access to these things.
+It is recommended to not change the licensing of the project's. 
 
 #Organize Contributions
 
