--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -16,6 +16,20 @@ This is no lawyer advice, the following only represents some contributor opinion
   * TODO Add copyright headers.
   * TODO Fulfill license obligations.
    * TODO Render license info in website.
+  * TODO Document third party content licensing.
+    * TODO net.splitcells.dem
+    * TODO net.splitcells.gel
+    * TODO net.splitcells.gel.core
+    * TODO net.splitcells.gel.doc
+    * TODO net.splitcells.gel.sheath
+    * TODO net.splitcells.network.blog
+    * TODO net.splitcells.os.state.interface
+    * TODO net.splitcells.os.state.interface.lib
+    * TODO net.splitcells.pom.java.defaults
+    * TODO net.splitcells.ses
+    * TODO net.splitcells.system
+    * TODO net.splitcells.website.default.content
+    * TODO net.splitcells.website.server
   * DONE Determine secondary licensing requirements.
 * DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
