#2 Document third party content licensing of net.splitcells.pom.java.defaults.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -114,11 +114,12 @@ listed source code repository logs.
 
 ## Third Party Content
 
-[Third Party Content ID/Name and Version]
+[Third Party Content ID/Name]
 
+* Version: [...]
 * License: [...]
-* Website: [...]
-* Source Code: [...]
+* [optional] Website: [...]
+* [optional] Source Code: [...]
 
 ```
 
