--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -25,7 +25,7 @@ This is no lawyer advice, the following only represents some contributor opinion
     * TODO net.splitcells.network.blog
     * TODO net.splitcells.os.state.interface
     * TODO net.splitcells.os.state.interface.lib
-    * TODO net.splitcells.pom.java.defaults
+    * DONE net.splitcells.pom.java.defaults
     * TODO net.splitcells.ses
     * TODO net.splitcells.system
     * TODO net.splitcells.website.default.content
