#2 Add sub task.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -30,6 +30,7 @@ This is no lawyer advice, the following only represents some contributor opinion
     * TODO net.splitcells.system
     * TODO net.splitcells.website.default.content
     * TODO net.splitcells.website.server
+  * TODO Remove old license information.
   * DONE Determine secondary licensing requirements.
 * DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
