--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -16,9 +16,10 @@ This is no lawyer advice, the following only represents some contributor opinion
   * TODO Add copyright headers.
   * TODO Fulfill license obligations.
    * TODO Render license info in website.
+   * TODO Consider all licenses in notice file.
   * TODO Document third party content licensing.
-    * TODO net.splitcells.dem
-    * TODO net.splitcells.gel
+    * DONE net.splitcells.dem
+    * DONE net.splitcells.gel
     * TODO net.splitcells.gel.core
     * TODO net.splitcells.gel.doc
     * TODO net.splitcells.gel.sheath
