--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -20,15 +20,15 @@ This is no lawyer advice, the following only represents some contributor opinion
   * TODO Document third party content licensing.
     * DONE net.splitcells.dem
     * DONE net.splitcells.gel
-    * TODO net.splitcells.gel.core
-    * TODO net.splitcells.gel.doc
-    * TODO net.splitcells.gel.sheath
-    * TODO net.splitcells.network.blog
+    * DONE net.splitcells.gel.core
+    * DONE net.splitcells.gel.doc
+    * DONE net.splitcells.gel.sheath
+    * DONE net.splitcells.network.blog
     * TODO net.splitcells.os.state.interface
     * TODO net.splitcells.os.state.interface.lib
     * DONE net.splitcells.pom.java.defaults
-    * TODO net.splitcells.ses
-    * TODO net.splitcells.system
+    * DONE net.splitcells.ses
+    * DONE net.splitcells.system
     * TODO net.splitcells.website.default.content
     * TODO net.splitcells.website.server
   * TODO Remove old license information.
