--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -29,8 +29,8 @@ This is no lawyer advice, the following only represents some contributor opinion
     * DONE net.splitcells.pom.java.defaults
     * DONE net.splitcells.ses
     * DONE net.splitcells.system
-    * TODO net.splitcells.website.default.content
-    * TODO net.splitcells.website.server
+    * DONE net.splitcells.website.default.content
+    * DONE net.splitcells.website.server
   * TODO Remove old license information.
   * DONE Determine secondary licensing requirements.
 * DONE Organize contributions.
