#2 Document third party content licensing of net.splitcells.os.state.interface.lib.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -24,8 +24,8 @@ This is no lawyer advice, the following only represents some contributor opinion
     * DONE net.splitcells.gel.doc
     * DONE net.splitcells.gel.sheath
     * DONE net.splitcells.network.blog
-    * TODO net.splitcells.os.state.interface
-    * TODO net.splitcells.os.state.interface.lib
+    * DONE net.splitcells.os.state.interface
+    * DONE net.splitcells.os.state.interface.lib
     * DONE net.splitcells.pom.java.defaults
     * DONE net.splitcells.ses
     * DONE net.splitcells.system
@@ -118,7 +118,7 @@ listed source code repository logs.
 
 [Third Party Content ID/Name]
 
-* Version: [...]
+* [optional if no specific version is used] Version: [...]
 * License: [...]
 * [optional] Website: [...]
 * [optional] Source Code: [...]
