--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -17,7 +17,7 @@ This is no lawyer advice, the following only represents some contributor opinion
   * TODO Fulfill license obligations.
    * TODO Render license info in website.
    * TODO Consider all licenses in notice file.
-  * TODO Document third party content licensing.
+  * DONE Document third party content licensing.
     * DONE net.splitcells.dem
     * DONE net.splitcells.gel
     * DONE net.splitcells.gel.core
@@ -32,6 +32,8 @@ This is no lawyer advice, the following only represents some contributor opinion
     * DONE net.splitcells.website.default.content
     * DONE net.splitcells.website.server
   * TODO Remove old license information.
+    * TODO net.splitcells.os.state.interface
+    * TODO net.splitcells.os.state.interface.lib
   * DONE Determine secondary licensing requirements.
 * DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
