--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -64,10 +64,41 @@ the original work and derivative works.
 ## Reasoning
 
 Before that, dual licensing the program source code under MIT and Apache 2.0
-was considered the correct way,
+was considered a correct way,
 because Rust seemed to be a good open source role model.
+It provided patent protections and great flexibility.
 The reasoning for [dual licensing](https://mail.mozilla.org/pipermail/rust-dev/2012-November/002664.html)
-seemed to be good, so it was considered (permissive licensing and patent clause).
+seemed to be good, so it was considered.
+
+I also looked for alternative licenses,
+which provided extended copyright protection via copy left.
+I wanted some additional protections,
+but did view strong copy left a bit harmful,
+because its bounds are not very clearly defined.
+Consider the fact, that there was a legal battle in the USA,
+about the question if APIs are copyrightable,
+and the historic problems of defining the bounds of strong copy left licenses.
+
+MPL 2.0 was considered,
+but the termination clause seems to be awful:
+if one did some error regarding the licensing,
+one could loose the license of an IP simply by missing some time frames
+set by the license.
+I also noted, that one may even get terminated after fixing of licensing issues,
+if the contributor choose to do so and if certain conditions are met.
+This seems to be a too big uncertainty for me.
+
+A similar problem arises from the termination clause in the (L)GPL 2.x license.
+Some corporations even explicitly stated,
+[that the termination clause of this license will not be enforced](https://gplcc.github.io/gplcc/).
+They adapted the termination clause of the GPL 3.0,
+which is very similar with the termination clause of the MPL 2.0,
+but this does not personally make me comfortable with the termination clause
+of MPL 2.0.
+
+Next I considered the EPL 2.0.
+The termination clauses seemed to be very ...**drom roll** ... reasonable
+**BA DUM TSS** and it was a weak copy left license.
 
 The Apache Software Foundation is an American organization,
 whereas the Eclipse Foundation AISBL is an Euorpean-based organization.
