--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -14,6 +14,19 @@ This is no lawyer advice, the following only represents some contributor opinion
   * DONE Determine and create license related files.
   * DONE  Define copyright headers.
   * TODO Add copyright headers.
+    * TODO net.splitcells.dem
+    * TODO net.splitcells.gel
+    * TODO net.splitcells.gel.core
+    * TODO net.splitcells.gel.doc
+    * TODO net.splitcells.gel.sheath
+    * TODO net.splitcells.network.blog
+    * TODO net.splitcells.os.state.interface
+    * TODO net.splitcells.os.state.interface.lib
+    * TODO net.splitcells.pom.java.defaults
+    * TODO net.splitcells.ses
+    * TODO net.splitcells.system
+    * TODO net.splitcells.website.default.content
+    * TODO net.splitcells.website.server
   * TODO Fulfill license obligations.
    * TODO Render license info in website.
    * TODO Consider all licenses in notice file.
