--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -188,7 +188,7 @@ listed source code repository logs.
  * or any later versions with the GNU Classpath Exception which is
  * available at https://www.gnu.org/software/classpath/license.html.
  *
- * SPDX-License-Identifier: EPL-2.0 OR MIT OR GPL-2.0 WITH Classpath-exception-2.0
+ * SPDX-License-Identifier: EPL-2.0 OR MIT OR GPL-2.0-or-later WITH Classpath-exception-2.0
  * /
 ```
 > This is the license header for Java files.
@@ -208,7 +208,7 @@ listed source code repository logs.
 # or any later versions with the GNU Classpath Exception which is
 # available at https://www.gnu.org/software/classpath/license.html.
 #
-# SPDX-License-Identifier: EPL-2.0 OR MIT OR GPL-2.0 WITH Classpath-exception-2.0
+# SPDX-License-Identifier: EPL-2.0 OR MIT OR GPL-2.0-or-later WITH Classpath-exception-2.0
 #
 ```
 > This is the license header for Bash,sh and Python files.
