#2 Add license headers to dem project.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -173,6 +173,8 @@ listed source code repository logs.
 
 ### File License Header
 
+For short Bash/sh scripts a license header is not required.
+
 ```
 /*
  * Copyright (c) 2021 Mārtiņš Avots (Martins Avots) and others
