--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -15,10 +15,10 @@ This is no lawyer advice, the following only represents some contributor opinion
   * DONE  Define copyright headers.
   * TODO Add copyright headers.
     * DONE net.splitcells.dem
-    * TODO net.splitcells.gel
-    * TODO net.splitcells.gel.core
-    * TODO net.splitcells.gel.doc
-    * TODO net.splitcells.gel.sheath
+    * DONE net.splitcells.gel
+    * DONE net.splitcells.gel.core
+    * DONE net.splitcells.gel.doc
+    * DONE net.splitcells.gel.sheath
     * TODO net.splitcells.network.blog
     * TODO net.splitcells.os.state.interface
     * TODO net.splitcells.os.state.interface.lib
