--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -21,7 +21,7 @@ This is no lawyer advice, the following only represents some contributor opinion
     * DONE net.splitcells.gel.sheath
     * DONE net.splitcells.network.blog
     * DONE net.splitcells.os.state.interface
-    * TODO net.splitcells.os.state.interface.lib
+    * DONE net.splitcells.os.state.interface.lib
     * TODO net.splitcells.pom.java.defaults
     * TODO net.splitcells.ses
     * TODO net.splitcells.system
