--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -22,9 +22,9 @@ This is no lawyer advice, the following only represents some contributor opinion
     * DONE net.splitcells.network.blog
     * DONE net.splitcells.os.state.interface
     * DONE net.splitcells.os.state.interface.lib
-    * TODO net.splitcells.pom.java.defaults
-    * TODO net.splitcells.ses
-    * TODO net.splitcells.system
+    * DONE net.splitcells.pom.java.defaults
+    * DONE net.splitcells.ses
+    * DONE net.splitcells.system
     * TODO net.splitcells.website.default.content
     * TODO net.splitcells.website.server
   * TODO Fulfill license obligations.
