#2 Add copyright header for website.server.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -13,7 +13,7 @@ This is no lawyer advice, the following only represents some contributor opinion
   * DONE Templates
   * DONE Determine and create license related files.
   * DONE  Define copyright headers.
-  * TODO Add copyright headers.
+  * DONE Add copyright headers.
     * DONE net.splitcells.dem
     * DONE net.splitcells.gel
     * DONE net.splitcells.gel.core
@@ -25,8 +25,8 @@ This is no lawyer advice, the following only represents some contributor opinion
     * DONE net.splitcells.pom.java.defaults
     * DONE net.splitcells.ses
     * DONE net.splitcells.system
-    * TODO net.splitcells.website.default.content
-    * TODO net.splitcells.website.server
+    * DONE net.splitcells.website.default.content
+    * DONE net.splitcells.website.server
   * TODO Fulfill license obligations.
    * TODO Render license info in website.
    * TODO Consider all licenses in notice file.
