#2 Remove old license information.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -44,9 +44,9 @@ This is no lawyer advice, the following only represents some contributor opinion
     * DONE net.splitcells.system
     * DONE net.splitcells.website.default.content
     * DONE net.splitcells.website.server
-  * TODO Remove old license information.
-    * TODO net.splitcells.os.state.interface
-    * TODO net.splitcells.os.state.interface.lib
+  * DONE Remove old license information.
+    * DONE net.splitcells.os.state.interface
+    * DONE net.splitcells.os.state.interface.lib
   * DONE Determine secondary licensing requirements.
 * DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
