--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -54,6 +54,8 @@ This is no lawyer advice, the following only represents some contributor opinion
 The [Eclipse Project Handbook](https://www.eclipse.org/projects/handbook/)
 is used as a guideline for this.
 
+When referring to a license use its full name or its SPDX-License-Identifier.
+
 # Determine licensing.
 
 ## Licensing Goal
