--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -48,6 +48,11 @@ This is no lawyer advice, the following only represents some contributor opinion
     * DONE net.splitcells.os.state.interface
     * DONE net.splitcells.os.state.interface.lib
   * DONE Determine secondary licensing requirements.
+  * TODO Create attributions files for not bundled third party content.
+  * TODO Create guidelines for notice and license file.
+  * TODO Note needed changes for future binary distributions.
+  * TODO Create top level legal document, where everything relevant including
+    tickets are linked.
 * DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
 
