--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -56,12 +56,14 @@ This is no lawyer advice, the following only represents some contributor opinion
 * DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
 
+# Guidelines
+
 The [Eclipse Project Handbook](https://www.eclipse.org/projects/handbook/)
 is used as a guideline for this.
 
-When referring to a license use its full name or its SPDX-License-Identifier.
-
 # Determine licensing.
+
+When referring to a license use its full name or its SPDX-License-Identifier.
 
 ## Licensing Goal
 
