#2 Link to interesting examples.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -3,8 +3,6 @@
 Author: Mārtiņš Avots
 
 This is no lawyer advice, the following only represents some contributor opinions and understanding.
-The [Eclipse Project Handbook](https://www.eclipse.org/projects/handbook/)
-is used as a guideline for this.
 
 * DONE Determine licensing.
   * DONE Determine licensing for software code.
@@ -58,6 +56,11 @@ is used as a guideline for this.
 * DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
 
+Following sites were used as a kind of general guide:
+
+* [software freedom conservancy](https://sfconservancy.org/)
+* [The Eclipse Project Handbook](https://www.eclipse.org/projects/handbook/)
+
 # Determine licensing.
 
 When referring to a license use its full name or its SPDX-License-Identifier.
@@ -90,13 +93,14 @@ The reasoning for [dual licensing](https://mail.mozilla.org/pipermail/rust-dev/2
 seemed to be good, so it was considered.
 
 I also looked for alternative licenses,
-which provided extended copyright protection via copy left.
+which provided extended copyright protection via copyleft
+([example argumentation context for copyleft](https://sfconservancy.org/blog/2021/jul/23/tivoization-and-the-gpl-right-to-install/)).
 I wanted some additional protections,
-but did view strong copy left a bit harmful,
+but did view strong copyleft a bit harmful ([example problem](https://sfconservancy.org/blog/2020/jan/06/copyleft-equality/)),
 because its bounds are not very clearly defined.
 Consider the fact, that there was a legal battle in the USA,
 about the question if APIs are copyrightable,
-and the historic problems of defining the bounds of strong copy left licenses.
+and the historic problems of defining the bounds of strong copyleft licenses.
 
 MPL 2.0 was considered,
 but the termination clause seems to be awful:
@@ -109,7 +113,8 @@ This seems to be a too big uncertainty for me.
 
 A similar problem arises from the termination clause in the (L)GPL 2.x license.
 Some corporations even explicitly stated,
-[that the termination clause of this license will not be enforced](https://gplcc.github.io/gplcc/).
+[that the termination clause of this license will not be enforced](https://gplcc.github.io/gplcc/)
+([additiona source](https://sfconservancy.org/blog/2019/may/11/termination-backports/)).
 They adapted the termination clause of the GPL 3.0,
 which is very similar with the termination clause of the MPL 2.0,
 but this does not personally make me comfortable with the termination clause
@@ -117,7 +122,7 @@ of MPL 2.0.
 
 Next I considered the EPL 2.0.
 The termination clauses seemed to be very ...**drom roll** ... reasonable
-**BA DUM TSS** and it was a weak copy left license.
+**BA DUM TSS** and it was a weak copyleft license.
 
 The Apache Software Foundation is an American organization,
 whereas the Eclipse Foundation AISBL is an Euorpean-based organization.
