#2 Expand contribution protocol reasoning.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -269,7 +269,19 @@ It is recommended to not change the licensing of the project's.
 
 ## Determine contribution protocol.
 
-The Linux kernel and Git are the main role models for this. 
+The Linux kernel and Git are the main role models for this.
+
+CTAs (copyright transfer agreement) and CLAs (copyright licensing aggreements)
+are not required by default,
+because the meaning, usage, effects, consequence, etc. of this are hard to manage
+and understand.
+Keep in mind, that the legal system in USA works different from the legal system
+of the EU and Germany.
+
+* https://sfconservancy.org/blog/2021/jun/30/who-should-own-foss-copyrights/
+* https://blog.hansenpartnership.com/owning-your-own-copyrights-in-open-source/
+* https://sfconservancy.org/blog/2014/jun/09/do-not-need-cla/
+* https://sfconservancy.org/contractpatch/
 
 ## Determine contribution documents.
 
