#2 Update notice and license file requirements.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -154,9 +154,17 @@ without accounting for third party content (i.e. dependencies).
 
 ### Notice File
 
-This file states the licenses of the project and its third party content.
-The notice file should contain all licensing information,
-except for the actual copies of the licenses etc.
+This file states the project and contains the licensing and attributions of the
+project's content.
+Third party dependencies not inside the repo may also be attributed here.
+
+The notice file also contains additional legally required notifications and
+attributions (i.e. required notification by the Apache 2.0 license).
+
+The notice file should contain all licensing and attribution information,
+except for the actual complete copies of the licenses etc.
+Keep in mind that the notice file may need to be updated/extended,
+if the project is distributed with bundled third party dependencies.
 
 ```
 # Notices for [project]
@@ -171,7 +179,13 @@ listed source code repository logs.
 
 [...]
 
+## Notes
+
 ## Third Party Content
+
+[Only needed if present.]
+
+### Third Party Dependencies
 
 [Third Party Content ID/Name]
 
@@ -245,11 +259,23 @@ __license__ = "EPL-2.0 OR MIT OR GPL-2.0-or-later WITH Classpath-exception-2.0"
 ```
 > This is the license header for 
 
+### License File
+
+The license file in the top level folder has to contain all licensing
+of the information (like source code and documentation) in this repository.
+
+The actual full license text has to be present in the license file,
+in order to ensure that everything is present.
+
+The license file has to contain all licensing of bundled dependencies in a
+distribution.
+
 ### License Information on File Basis
 
 Each file should have its own licensing info.
 In other words licensing is done on a per-file basis.
-It is recommended, that the licensing info is located in the licensed files itself.
+It is recommended, that the licensing info is located in the licensed files
+itself.
 This is usually done via copyright headers.
 
 Alternatively, Licensing info of a file can be split into a separate file,
