--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -53,6 +53,7 @@ This is no lawyer advice, the following only represents some contributor opinion
   * TODO Note needed changes for future binary distributions.
   * TODO Create top level legal document, where everything relevant including
     tickets are linked.
+  * TODO Have copies of all relevant licenses.
 * DONE Organize contributions.
 * TODO Sign project and document project founder's (Mārtiņš Avots) public keys.
 
