--- a/src/main/md/net/splitcells/network/tickets/open/77.md
+++ b/src/main/md/net/splitcells/network/tickets/open/77.md
@@ -1,1 +1,21 @@
 # Provide project overview in form of a network visualization.
+
+Author: Mārtiņš Avots
+
+Provides an overview of the project via a graph with non overlapping edges
+in order to simplify structure.
+Nodes are only connected with their most important neighbours.
+Dashed lines symbolise connections which are not controlled by this project,
+but which are present.
+
+## Used Technology.
+
+PlantUML is currently used for visualization, because it provides a way to
+layout a network via relative positions of each node to each other, and it just
+works. This [PlantUML Editor](https://plantuml-editor.kkeisuke.com/) is
+currently used.
+
+PlantUML seems to be pretty heavy and there does not seem to be client side
+implementation for i.e. browsers. So, an alternative would be nice. Maybe plain
+svg with a good template?
+[Mermaid](https://mermaid-js.github.io/mermaid/#/) may be a good alternative.
