#2 Document default license compliance actions.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -288,9 +288,26 @@ Their relation should be clearly visible by using the same file prefix.
 ### License Obligations
 
 Every copy and distribution of this project should contain copies of the licenses,
-the notice and the license file.
-Each distribution format should provide easy access to these things.
-It is recommended to not change the licensing of the project's. 
+the notice and the license file of all present components in general.
+Also, always provide a list of all components and their attributions.
+They should be easily findable via top level files,
+whereby linking to further files is acceptable and often good
+in order to avoid cluttering the top level folder.
+
+It is recommended to not change the licensing of the project's components
+and leave these in its original form. 
+
+Apache-2.0:
+* 
+
+* BSD-2-Clause
+* BSD-3-Clause
+* GPL-2.0-or-later WITH Classpath-exception-2.0
+* EPL-2.0
+* ISC
+* LGPL-2.1-or-later
+* MIT
+* MPL 2.0
 
 # Organize Contributions
 
