--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -287,23 +287,50 @@ Their relation should be clearly visible by using the same file prefix.
 
 ### License Obligations
 
+#### Default
+
 Every copy and distribution of this project should contain copies of the licenses,
 the notice and the license file of all present components in general.
 Also, always provide a list of all components and their attributions.
 They should be easily findable via top level files,
 whereby linking to further files is acceptable and often good
 in order to avoid cluttering the top level folder.
+If the distribution is in the form of a program etc., it should provide this
+information in its native way easily.
 
 It is recommended to not change the licensing of the project's components
-and leave these in its original form. 
+and leave these in its original form.
+
+#### License Specific License Obligations
 
 Apache-2.0:
-* 
+* Provide license file, attribution and license notice.
+* Provide NOTICE, when the component is bundled.
+* State changes done to these if any.
 
-* BSD-2-Clause
-* BSD-3-Clause
-* GPL-2.0-or-later WITH Classpath-exception-2.0
-* EPL-2.0
+BSD-2-Clause
+* Provide license file.
+* Provide copyright notice and attribution.
+BSD-3-Clause
+
+* Provide license file.
+* Provide copyright notice and attribution.
+
+GPL-2.0-or-later WITH Classpath-exception-2.0
+
+* This license is not accepted for third party content of a project at the
+  moment.
+
+EPL-2.0
+
+* Provide license file, attribution and license notice.
+* When bundled provide NOTICE, source code or working link to source code.
+* Generally, do not provide third party code
+* Do not mix EPL 2.0 code with other code, because of the EPL 2.0 copy left
+  nature. EPL 2.0 code and other licensed code should be kept in separate
+  projects.
+* Point to `NO WARRANTY` and `DISCLAIMER OF LIABILITY` in distributions.
+
 * ISC
 * LGPL-2.1-or-later
 * MIT
