#2 Add general guide.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -61,6 +61,7 @@ Following sites were used as a kind of general guide:
 
 * [software freedom conservancy](https://sfconservancy.org/)
 * [The Eclipse Project Handbook](https://www.eclipse.org/projects/handbook/)
+* [Eclipse IP Management Modernization by Sharon Corbett](https://www.eclipsecon.org/sites/default/files/slides/IP%20Management%20Modernization.pdf)
 
 # Determine licensing.
 
