#2 Note license obligations.

--- a/src/main/md/net/splitcells/network/tickets/open/2.md
+++ b/src/main/md/net/splitcells/network/tickets/open/2.md
@@ -302,16 +302,19 @@ information in its native way easily.
 It is recommended to not change the licensing of the project's components
 and leave these in its original form.
 
-#### License Specific License Obligations
+#### Overview of License Specific License Obligations
 
 Apache-2.0:
+
 * Provide license file, attribution and license notice.
 * Provide NOTICE, when the component is bundled.
 * State changes done to these if any.
 
 BSD-2-Clause
+
 * Provide license file.
 * Provide copyright notice and attribution.
+
 BSD-3-Clause
 
 * Provide license file.
@@ -331,11 +334,32 @@ EPL-2.0
   nature. EPL 2.0 code and other licensed code should be kept in separate
   projects.
 * Point to `NO WARRANTY` and `DISCLAIMER OF LIABILITY` in distributions.
+* This is weak copy left.
 
 * ISC
+
+* Provide license file.
+* Provide copyright notice and attribution.
+
 * LGPL-2.1-or-later
-* MIT
-* MPL 2.0
+
+* Link to or provide original source code.
+* Provide license file, copyright notice and attribution.
+* Statically linked/bundled requires a way to change or replace this dependency.
+* Sublicensing is not allowed.
+* This is weak copy left.
+
+MIT
+
+* Provide license file.
+* Provide copyright notice and attribution.  
+
+MPL 2.0
+
+* Provide license file.
+* Provide copyright notice and attribution.
+* This is weak copy left.
+* Link to or provide original source code.
 
 # Organize Contributions
 
